# water

./: Cargo.toml
assets/maps/: map_test.glb
assets/models/: character.glb
assets/shaders/: shader.wgsl
src/: animation.rs  bimap.rs  camera.rs  character.rs  client.rs  console.rs  consts.rs  input.rs  main.rs  menu.rs  server.rs  ui.rs  water.rs
src/client/: client.rs  mod.rs  reconciliation.rs  sync.rs
src/network_visualizer/: circular_buffer.rs  mod.rs  visualizer.rs
src/server/: death.rs  mod.rs  server.rs  server_camera.rs
src/shared/: tick.rs
