[package]
name = "water"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29"
rand = "0.8.5"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
